added responsive file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Design Landing Page</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <!-- Header -->
@@ -24,6 +25,7 @@
           <h5 class="nav-list-item">CONTACT</h5>
           <h5 class="nav-list-item nav-list-item-active">OTHER PAGE</h5>
         </div>
+        <i class="fa-solid fa-bars" aria-hidden="true"></i>
       </nav>
 
       <!-- Header Image -->
